--- a/style.css
+++ b/style.css
@@ -134,18 +134,31 @@ h2{
     font-size: clamp(1rem, 1.2rem, 2rem);
 }
 
-.nav ul li{
-    border: 2px solid white;
-    border-radius: 5px;
+.nav ul li button{
     padding: 10px;
+    font-family: 'Quicksand', var(--font);
+    font-weight: bolder;
+    transition: 0.5s;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 2px solid whitesmoke;
+    cursor: pointer;
     
 }
 
 .nav ul li a{
     text-decoration: none;
     letter-spacing: 1.5px;
-    
-    
+    color: white;   
+}
+
+.nav ul li button:hover{
+    background-color: black; 
+
+}
+
+.nav ul li button a:hover{
+    background-color: transparent;
 }
 
 
