--- a/schedule-style.css
+++ b/schedule-style.css
@@ -3,27 +3,37 @@
 }
 
 body{
-    background-image: url(PurpleAnimeCity.png);
+    background-color: #0c192c;
+    height: 100vh;
+    overflow: hidden;
 }
 
 table{
-    padding: 10px;
     border-collapse: collapse;
     border-radius: 2px;
     background-color: aqua;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    background-color: #fff;
 }
 
 th{
     font-family: 'Prompt', var(--font);
+    background-color: #ec5781;
+}
+
+tr:hover {
+    background-color: #f1f1f1;
 }
 
 td{
     font-family: 'Open Sans', var(--font);
+    padding: 10px;
 }
 
 .schedule{
-    height: 400px;
-    width: 400px;
+    height: auto;
+    width: auto;
     position: relative;
     margin: 0 auto;
     justify-content: center;
@@ -41,32 +51,57 @@ td{
     font-size: clamp(1rem, 1.2rem, 2rem);
 }
 
-.nav ul li button{
-    padding: 10px;
-    font-family: 'Quicksand', var(--font);
-    font-weight: bolder;
-    transition: 0.5s;
-    background-color: transparent;
-    border-radius: 4px;
-    border: 2px solid black;
-    cursor: pointer;
-    
-}
-
 .nav ul li a{
     text-decoration: none;
     letter-spacing: 1.5px;
-    color: black;   
-    transition: 0.5s;
-
+    color: white;  
+    transition: 0.5s; 
 }
 
-.nav ul li button:hover{
-    background-color: black; 
-    color: aliceblue;
+.nav ul li a:hover{
+    color: #ff6f61;
 }
 
-.nav ul li button a:hover{
-    background-color: black; 
-    color: aliceblue;
+.container{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
+
+.bubbles{
+    position: relative;
+    display: flex;
+}
+
+.bubbles span{
+    position: relative;
+    width: 30px;
+    height: 30px;
+    background: #4fc3dC;
+    margin: 0 4px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 10px #4fc3dC44, 0 0 50px #4fc3dC, 
+    0 0 100px #4fc3dC;
+    animation: animate 15s linear infinite;
+    animation-duration: calc(160s / var(--i));
+}
+
+.bubbles span:nth-child(even){
+    background: #ff2d75;
+    box-shadow: 0 0 0 10px #ff2d7544, 0 0 50px #ff2d75, 
+    0 0 100px #ff2d75;
+}
+
+@keyframes animate{
+    0%{
+        transform: translateY(110vh) scale(0);
+    }
+
+    100%{
+        transform: translateY(-10vh) scale(1);
+    }
+}
+
+
+
