--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@
     color: var(--font-color);
 }
 
+
+
 body{
-    background-color: #404040;
+    background-color: #0c192c;
 }
 
 img{
@@ -13,6 +15,8 @@ img{
     width: 18vw;
     border-radius: 10px;
     border: 3px solid whitesmoke;
+    position: relative;
+    z-index: 10;
 }
 
 :root{
@@ -30,6 +34,8 @@ img{
 
 .profile{
     margin: 2em;
+    position: relative;
+    z-index: 20;
 }
 
 h1{
@@ -70,6 +76,11 @@ h2{
 .background{
     position: relative;
     top: 1.8em;
+    border: 3px solid white;
+    border-radius: 10px;
+    padding: 6px;
+    width: 40vh;
+    background-color: #ff2d75;
 }
 
 .education{
@@ -83,8 +94,8 @@ h2{
     width: 60em;
     border-radius: 10px;
     position: relative;
-    left: 28vw;
-    bottom: 70vh;
+    left: 22vw;
+    bottom: 90vh;
 }
 
 .skills th{
@@ -113,19 +124,9 @@ h2{
     list-style: none;
 }
 
-.schedule{
-    height: 400px;
-    width: 400px;
-    position: relative;
-    top: -30vh;
-    margin: 0 auto;
-    justify-content: center;
-    align-items: center;
-}
-
 .nav ul{
     position: relative;
-    left: 80vw;
+    left: 74vw;
     top: 3.9vh;
     font-family: var(--font);
     display: flex;
@@ -153,13 +154,63 @@ h2{
 }
 
 .nav ul li button:hover{
-    background-color: black; 
+    background-color: #ff6f61; 
 
 }
 
-.nav ul li button a:hover{
-    background-color: transparent;
+table{
+    border-collapse: collapse;
+    width: 100%; 
+    margin-bottom: 20px; 
 }
+
+th{
+    background-color: #2E8B8B;
+    font-weight: bold;
+}
+
+.container{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.bubbles{
+    position: relative;
+    display: flex;
+}
+
+.bubbles span{
+    position: relative;
+    width: 30px;
+    height: 30px;
+    background: #4fc3dC;
+    margin: 0 4px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 10px #4fc3dC44, 0 0 50px #4fc3dC, 
+    0 0 100px #4fc3dC;
+    animation: animate 15s linear infinite;
+    animation-duration: calc(160s / var(--i));
+}
+
+.bubbles span:nth-child(even){
+    background: #ff2d75;
+    box-shadow: 0 0 0 10px #ff2d7544, 0 0 50px #ff2d75, 
+    0 0 100px #ff2d75;
+}
+
+@keyframes animate{
+    0%{
+        transform: translateY(100vh) scale(0);
+    }
+
+    100%{
+        transform: translateY(-10vh) scale(1);
+    }
+}
+
+
 
 
 
